--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="sign_up_button_text">SIGN UP</string>
     <string name="not_registered">Not registered?</string>
     <string name="what_i_do">What i do</string>
+    <string name="search">Search</string>
+    <string name="displaynametextview">DisplayNameTextView</string>
+    <string name="message">message</string>
+    <string name="now">now</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="update">Update</string>
+    <string name="sign_out">Sign Out</string>
 </resources>
